--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
+astroid==3.3.8
+click==8.1.8
+dill==0.3.9
+isort==6.0.0
+mccabe==0.7.0
+mypy-extensions==1.0.0
 mysql-connector-python==9.2.0
 numpy==2.2.1
+packaging==24.2
 pandas==2.2.3
+pathspec==0.12.1
+platformdirs==4.3.6
+pycodestyle==2.12.1
+pyflakes==3.2.0
+pylint==3.3.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
 schedule==1.2.2
 six==1.17.0
+tomli==2.2.1
+tomlkit==0.13.2
+typing_extensions==4.12.2
 tzdata==2024.2
