--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 astroid==3.3.8
+black==25.1.0
 click==8.1.8
 dill==0.3.9
 isort==6.0.0
@@ -14,6 +15,7 @@ pycodestyle==2.12.1
 pyflakes==3.2.0
 pylint==3.3.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 schedule==1.2.2
 six==1.17.0
