--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-#ignore data folder
+#ignore data and config folders
 data/
 data_test/
 venv_dev/
 logs/
 .env
 docker-compose.yml
+app_config/
 # Python bytecode files
 __pycache__/
 *.pyc
