Removed key col from all test scripts, successful testing of ethnicity codeframe change

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ logs/
 .env
 docker-compose.yml
 app_config/
+# VS Code personal settings
+.vscode/settings.json
 # Python bytecode files
 __pycache__/
 *.pyc
