--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+agate==1.7.1
 aiosqlite==0.21.0
 alembic==1.15.1
 annotated-types==0.7.0
@@ -8,6 +9,7 @@ astroid==3.3.8
 async-timeout==5.0.1
 asyncpg==0.30.0
 attrs==25.1.0
+babel==2.17.0
 black==25.1.0
 cachetools==5.5.2
 certifi==2025.1.31
@@ -19,6 +21,10 @@ colorama==0.4.6
 coolname==2.2.0
 cryptography==44.0.2
 dateparser==1.2.1
+dbt-core==1.7.19
+dbt-extractor==0.5.1
+dbt-mysql==1.7.0
+dbt-semantic-interfaces==0.4.4
 Deprecated==1.2.18
 dill==0.3.9
 docker==7.1.0
@@ -37,7 +43,8 @@ httpx==0.28.1
 humanize==4.12.1
 hyperframe==6.1.0
 idna==3.10
-importlib_metadata==8.5.0
+importlib-metadata==6.11.0
+isodate==0.6.1
 isort==6.0.0
 Jinja2==3.1.6
 jinja2-humanize-extension==0.4.0
@@ -45,25 +52,34 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+leather==0.4.0
+Logbook==1.5.3
 Mako==1.3.9
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mashumaro==3.14
 mccabe==0.7.0
 mdurl==0.1.2
+minimal-snowplow-tracker==0.0.2
+more-itertools==10.6.0
+msgpack==1.1.0
 mypy-extensions==1.0.0
 mysql-connector-python==9.2.0
+networkx==3.4.2
 numpy==2.2.1
 oauthlib==3.2.2
 opentelemetry-api==1.30.0
 orjson==3.10.15
 packaging==24.2
 pandas==2.2.3
-pathspec==0.12.1
+parsedatetime==2.6
+pathspec==0.11.2
 pendulum==3.0.0
 platformdirs==4.3.6
 prefect==3.2.11
 prometheus_client==0.21.1
+protobuf==4.25.6
 pycodestyle==2.12.1
 pycparser==2.22
 pydantic==2.10.6
@@ -77,6 +93,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
 python-socks==2.7.1
+pytimeparse==1.1.8
 pytz==2024.2
 PyYAML==6.0.2
 readchar==4.2.1
@@ -94,6 +111,7 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
+sqlparse==0.5.3
 starlette==0.46.0
 text-unidecode==1.3
 time-machine==2.16.0
@@ -105,7 +123,7 @@ typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.3.1
 ujson==5.10.0
-urllib3==2.3.0
+urllib3==1.26.20
 uv==0.6.4
 uvicorn==0.34.0
 websockets==15.0.1
