added student/program dimensions and the student/program fact table

--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -35,4 +35,6 @@ models:
       +materialized: table
     dimensions:
       +materialized: table
+    facts:
+      +materialized: table
     views:
