--- a/dbt/models/dimensions/dim_hesa_student.yml
+++ b/dbt/models/dimensions/dim_hesa_student.yml
@@ -8,6 +8,10 @@ models:
         data_type: varchar(61)
         description: "Surrogate key, structured STU_<student_guid>_<hesa_delivery> for human readability"
 
+      - name: canonical_student_key
+        data_type: char(36)
+        description: "Business key for cross-delivery analysis, allows joining student data across multiple deliveries"
+
       - name: student_guid
         data_type: char(36)
         description: "HESA-provided unique identifier for a student, persisting through all courses of study"
@@ -63,7 +67,7 @@ models:
 
       - name: hesa_delivery
         data_type: varchar(20)
-        description: "Identifies the originating fileset from  HESA (collection code + actual delivery date)"
+        description: "Unique identifier for a HESA data delivery in format 'YYXXX_YYYYMMDD' where YY=academic year, XXX=schema version, and YYYYMMDD=delivery date. Maintains data lineage and enables cross-delivery analysis."
 
       - name: ethnicity
         data_type: varchar(3)
