--- a/dbt/models/facts/fact_hesa_student_programs.yml
+++ b/dbt/models/facts/fact_hesa_student_programs.yml
@@ -12,10 +12,17 @@ models:
         data_type: varchar(61)
         description: ""
 
+      - name: canonical_student_key
+        data_type: char(36)
+        description: "Business key for cross-delivery analysis, allows joining student data across multiple deliveries"
+
+      - name: canonical_program_key
+        data_type: char(36)
+        description: "Business key for cross-delivery analysis, allows joining program data across multiple deliveries"
+
       - name: hesa_delivery
         data_type: varchar(20)
-        description: ""
-
+        description: "Unique identifier for a HESA data delivery in format 'YYXXX_YYYYMMDD' where YY=academic year, XXX=schema version, and YYYYMMDD=delivery date. Maintains data lineage and enables cross-delivery analysis."
       - name: enrol_date
         data_type: date
         description: ""
