Corrections to credential handling in setup.sh and associated docker-compose change

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,20 @@
 # Environment variables for data_thru ETL pipeline.
 # Some config is for local execution, some used by docker compose.
 
-# MySQL server credentials for instantiating container
+# Server name/root and userid/password for the ETL pipeline.
+# Used during build of MySQL container and to create the ETL user.
+MYSQL_DATABASE=uni_dwh_db # if changing this, change hardcoded refs in DBT profiles 
 MYSQL_ROOT_PASSWORD=choose_a_password
-MYSQL_DATABASE=university_data_warehouse
 MYSQL_USER=username_for_etl_pipeline
 MYSQL_PASSWORD=password_for_etl_pipeline
 
-# MySQL credentials for ETL (local & containerised execution)
-DB_NAME=same_as_MYSQL_DATABASE
-DB_USER=same_as_MYSQL_USER
-DB_PWD=same_as_MYSQL_PASSWORD
-
-# MySQL server (containerised, but exposed as localhost 3307)
-DB_HOST=localhost
+# MySQL server name/port
+# mysql/3306 : for containerised ETL to access containerised MySQL (Docker Compose network)
+# localhost/3307 :for host-side GUI tools to access containerised MySQL (exposed by Docker Compose)
+DB_HOST=mysql
 DB_PORT=3307
-
+LOCAL_DB_HOST=localhost
+LOCAL_DB_PORT=3307
 # ETL working directories (for local execution)
 # To run with supplied test data, change only BASE_DIR.
 # To run with real data, change BASE_DIR and DATA_DIR.
