docker-compose correction to get local MySQL port from LOCAL_DB_PORT, setup.sh now waits 60secs for MySQL

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Environment variables for data_thru ETL pipeline.
-# Some config is for local execution, some used by docker compose.
+# Referenced extensively by docker compose.
 
 # Server name/root and userid/password for the ETL pipeline.
 # Used during build of MySQL container and to create the ETL user.
@@ -12,9 +12,10 @@ MYSQL_PASSWORD=password_for_etl_pipeline
 # mysql/3306 : for containerised ETL to access containerised MySQL (Docker Compose network)
 # localhost/3307 :for host-side GUI tools to access containerised MySQL (exposed by Docker Compose)
 DB_HOST=mysql
-DB_PORT=3307
+DB_PORT=3306
 LOCAL_DB_HOST=localhost
 LOCAL_DB_PORT=3307
+
 # ETL working directories (for local execution)
 # To run with supplied test data, change only BASE_DIR.
 # To run with real data, change BASE_DIR and DATA_DIR.
